adding more CDP integrations

--- a/section/captureData/dotdigital.mdx
+++ b/section/captureData/dotdigital.mdx
@@ -23,17 +23,17 @@ To go live with dotdigital you will need to create an API user and share the det
 <Accordion title="See step by step tutorial">
 <Steps>
     <Step title="Access Project Settings">
-        Sign in to your [Bloomreach Engagement](https://engagement.bloomreach.com) instance and in the top right corner, click on the settings icon and then “Project settings”.
+        Sign in to your Dotdigital account and in the sidebar menu, click in “Account settings”
 
         <img
         className="block dark:hidden"
-        src="/images/dotDigitalProjectSettings.png"
+        src="/images/dotDigitalAccountSettings.png"
         alt="Dotdigital Project Settings"
         style={{ borderRadius: '0.5rem' }}
         />
         <img
         className="hidden dark:block"
-        src="/images/dotDigitalProjectSettings.png"
+        src="/images/dotDigitalAccountSettings.png"
         alt="Dotdigital Project Settings"
         style={{ borderRadius: '0.5rem' }}
         />
