--- a/section/captureData/bloomreach.mdx
+++ b/section/captureData/bloomreach.mdx
@@ -4,8 +4,229 @@ description: 'Start building loyal communities with targeted, gated offers.'
 icon: 'fa-fw'
 ---
 
+Once the user submits their email and/or mobile number, gocertify will send this data to the customer's Bloomreach account, in the form of a “Custom Event” (named “gocertify”). Bloomreach is intelligent enough to either create a new Customer (if the email/phone number is new) or use an existing Customer (if the email/phone number is already in your platform). 
+
+After that screen, when the user successfully verifies as a target group (student, healthcare, senior, etc) a second “Custom Event” (named “gocertify” as well) will be triggered, including the details of the verification.
+
+With this data, you will be able to generate segments based on these events.
+
 ## Requirements to go live
 
+To start syncing data you'll need to create a new API user and share the details with your gocertify account manager.
+
+<Accordion title="See step by step tutorial">
+    <Steps>
+        <Step title="Access Project Settings">
+            Sign in to your [Bloomreach Engagement](https://engagement.bloomreach.com) instance and in the top right corner, click on the settings icon and then “Project settings”.
+
+            <img
+            className="block dark:hidden"
+            src="/images/bloomreachProjectSettings.png"
+            alt="Dotdigital Project Settings"
+            style={{ borderRadius: '0.5rem' }}
+            />
+            <img
+            className="hidden dark:block"
+            src="/images/bloomreachProjectSettings.png"
+            alt="Dotdigital Project Settings"
+            style={{ borderRadius: '0.5rem' }}
+            />
+        </Step>
+
+        <Step title="Navigate to API Settings">
+        In the left sidebar, go to “Access management” and then select “API”.
+            <img
+            className="block dark:hidden"
+            src="/images/bloomreachApiSettings.png"
+            alt="Bloomreach API Settings"
+            style={{ borderRadius: '0.5rem' }}
+            />
+            <img
+            className="hidden dark:block"
+            src="/images/bloomreachApiSettings.png"
+            alt="Bloomreach API Settings"
+            style={{ borderRadius: '0.5rem' }}
+            />
+
+        </Step>
+
+        <Step title="Create a new group ">
+        In the “API groups” section, open the dropdown selector and choose “+New group”
+
+        <img
+        className="block dark:hidden"
+        src="/images/bloomreachNewApiGroup.png"
+        alt="Bloomreach New API Group"
+        style={{ borderRadius: '0.5rem' }}
+        />
+        <img
+        className="hidden dark:block"
+        src="/images/bloomreachNewApiGroup.png"
+        alt="Bloomreach New API Group"
+        style={{ borderRadius: '0.5rem' }}
+        />
+
+        </Step>
+
+        <Step title="Create the gocertify group">
+        In the popup, choose “Private access” and name the group “gocertify” and click on “Create group”. You'll be given a secret key, which you'll need to note down for later.
+
+        <img
+        className="block dark:hidden"
+        src="/images/bloomreachApiGroup.png"
+        alt="Bloomreach API Group"
+        style={{ borderRadius: '0.5rem' }}
+        />
+        <img
+        className="hidden dark:block"
+        src="/images/bloomreachApiGroup.png"
+        alt="Bloomreach API Group"
+        style={{ borderRadius: '0.5rem' }}
+        />
+        </Step>
+
+        <Step title="Set the permissions">
+        Scroll down to the “Group permissions” section and click on the “Events” tab. Enable the “Set” checkbox next to “New events”.
+        This means you will allow us to only “create new type of events”. If you already have a “consent” event on that list (under the “Other” section), please enable it too.
+
+        <img
+        className="block dark:hidden"
+        src="/images/bloomreachGroupPermissions.png"
+        alt="Bloomreach Group Permissions"
+        style={{ borderRadius: '0.5rem' }}
+        />
+        <img
+        className="hidden dark:block"
+        src="/images/bloomreachGroupPermissions.png"
+        alt="Bloomreach Group Permissions"
+        style={{ borderRadius: '0.5rem' }}
+        />
+        </Step>
+
+        <Step title="Find your Hard ID ">
+        Find your “Hard ID”. Go to visit any Customer profile in your instance, and take a look at the field name where their email is in. It's typically “registered” or “email_id”. See the example below. In this case, your Hard ID is “registered”:
+
+        <img
+        className="block dark:hidden"
+        src="/images/bloomreachHardID.png"
+        alt="Bloomreach Hard ID"
+        style={{ borderRadius: '0.5rem' }}
+        />
+        <img
+        className="hidden dark:block"
+        src="/images/bloomreachHardID.png"
+        alt="Bloomreach Hard ID"
+        style={{ borderRadius: '0.5rem' }}
+        />
+
+        </Step>
+
+        <Step title="Share the user details with gocertify">
+            Go to onetimesecret.com and paste the credentials there, in this format. Even if it's not required, we encourage you to also add a random “Passphrase”. This will generate a secret link that will expire within 7 days and will be visible only once. Once done, share this link with your Customer Success Manager at gocertify.
+            <img
+            className="block dark:hidden"
+            src="/images/bloomreachOneTimeSecret.png"
+            alt="Onetime Secret"
+            style={{ borderRadius: '0.5rem' }}
+            />
+            <img
+            className="hidden dark:block"
+            src="/images/bloomreachOneTimeSecret.png"
+            alt="Onetime Secret"
+            style={{ borderRadius: '0.5rem' }}
+            />
+
+            ```YAML Credentials placeholder
+            Project token: xxxxxxx-xxxxxx-xxxxxx-xxxxxxxxxx
+            API Base URL: xxxxxxxxxxxxxxxxxxxx.bloomreach.com
+            API Key ID: xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+            API Secret: xxxxxxxxxxxxxxxxxxxxxx
+            Hard ID: registered
+
+            ```
+
+        </Step>
+    </Steps>
+</Accordion>
+
 ## How data will appear in Bloomreach
+You will end up having one Contact with 2 events (one for the “consent intent” and another one after they verify as a group and claim an offer).
+
+<Tip>
+    Remember you still need to subscribe the customer to your marketing campaigns.
+</Tip>
+
+<Frame caption="First Bloomreach Event">
+    <img
+    className="block dark:hidden"
+    src="/images/bloomreachFirstEvent.png"
+    alt="First Bloomreach Event"
+    style={{ borderRadius: '0.5rem' }}
+    />
+    <img
+    className="hidden dark:block"
+    src="/images/bloomreachFirstEvent.png"
+    alt="First Bloomreach Event"
+    style={{ borderRadius: '0.5rem' }}
+    />
+
+</Frame>
+
+
+Your second event can have two forms, depending on whether the shopper has verified as a group or not.
+
+<Frame caption="Second Bloomreach Event for verified groups">
+<img
+  className="block dark:hidden"
+  src="/images/bloomreachSecondEventVerified.png"
+  alt="Second Bloomreach Event for verified groups"
+  style={{ borderRadius: '0.5rem' }}
+/>
+<img
+  className="hidden dark:block"
+  src="/images/bloomreachSecondEventVerified.png"
+  alt="Second Bloomreach Event for verified groups"
+  style={{ borderRadius: '0.5rem' }}
+/>
+
+
+</Frame>
+
+<Frame caption="For external offers that don't require verification (often included in the OfferHub), the Second request will be slightly different, as it won't include the “group_xxx” keys">
+<img
+  className="block dark:hidden"
+  src="/images/bloomreachSecondEventOpenOffers.png"
+  alt="Second Bloomreach Event for open offers"
+  style={{ borderRadius: '0.5rem' }}
+/>
+<img
+  className="hidden dark:block"
+  src="/images/bloomreachSecondEventOpenOffers.png"
+  alt="Second Bloomreach Event for open offers"
+  style={{ borderRadius: '0.5rem' }}
+/>
+
+</Frame>
 
 ## How to create segments in Bloomreach
+You can build segments based on the Custom Events we have sent to your account, by going to “Customers” and then creating filters, like the one below:
+
+<img
+  className="block dark:hidden"
+  src="/images/bloomreachFilters.png"
+  alt="Bloomreach Filters"
+  style={{ borderRadius: '0.5rem' }}
+/>
+<img
+  className="hidden dark:block"
+  src="/images/bloomreachFilters.png"
+  alt="Bloomreach Filters"
+  style={{ borderRadius: '0.5rem' }}
+/>
+
+You can use the “state” attribute to filter all the Customers that have given you consent for marketing or the ones that are verified as a group or simply claimed an offer.
+
+When the filter is ready, in the top right corner of that filter you will see the option to save this filter for later.
+
+You can even run automations on your end based on these filters.
+
