--- a/section/captureData/csvExport.mdx
+++ b/section/captureData/csvExport.mdx
@@ -5,6 +5,22 @@ icon: 'file-csv'
 ---
 
 Once the user submits their email and/or mobile number, gocertify saves the data within a secure and encrypted database. You can access these contacts [within your dashboard](https://secure.gocertify.me/dashboard) and export contacts to a CSV.
+
+<Frame caption="Access your CSV data within your dashboard">
+<img
+  className="block dark:hidden"
+  src="/images/CSV-Export.png"
+  alt="CSV Export"
+  style={{ borderRadius: '0.5rem' }}
+/>
+<img
+  className="hidden dark:block"
+  src="/images/CSV-Export.png"
+  alt="CSV Export"
+  style={{ borderRadius: '0.5rem' }}
+/>
+</Frame>
+
 <Tip>
 This is a manual process, you won't receive shopper data instantly, unlike with the [CDP integrations](/section/captureData/CDPintegrationOverview). This means you can't do automated sequences/actions each time a shopper is verified or claims and offer.
 </Tip>
@@ -15,3 +31,5 @@ When you export this data you can process it accordingly (ie: creating a profile
 <Frame caption="Weekly notification email's will keep you updated on the number of new contacts added">
    <img src="/images/csvNotification.png" alt="Notification email for CSV" width="100%" style={{ borderRadius: '0.5rem' }} />
 </Frame>
+
+
