added osm detail pages

--- a/section/promoteOffers/floatingButtonOSM.mdx
+++ b/section/promoteOffers/floatingButtonOSM.mdx
@@ -4,11 +4,35 @@ description: 'Start building loyal communities with targeted, gated offers.'
 icon: 'square-web-awesome-stroke'
 ---
 
-Inline placements are a powerful way to drive conversions by surfacing offers directly on product/checkout pages, maximising conversion of high intent shoppers.
+Floating button placements are a powerful way to drive conversions by surfacing offers directly on product/checkout pages, maximising conversion of high intent shoppers.
 
 <CardGroup cols={1}>
   <Card title="Floating Button" href="/section/promoteOffers/on-site-placements" img="/images/floatingButtonOSM.png">
     Display a hovering trigger that floats above the page content. Highly visible and no-dev installation.
   </Card>
 </CardGroup>
+
+## How to enable floating button placements
+
+You can one click enable floating button placements on any page where you have already installed the gocertify head script (see [integrate on site](/section/gettingStarted/integrateOnSite)) without the need for a developer.
+Simply log into your [gocertify dashboard](https://secure.gocertify.me/dashboard) and click on the On-Site Messaging tab.
+
+<img
+  className="block dark:hidden"
+  src="/images/osm-floating-button.png"
+  alt="Floating Button On-Site Messaging"
+  style={{ borderRadius: '0.5rem' }}
+/>
+<img
+  className="hidden dark:block"
+  src="/images/osm-floating-button.png"
+  alt="Floating Button On-Site Messaging"
+  style={{ borderRadius: '0.5rem' }}
+/>
+
+
+
+## How to position your floating button placement
+
+You can change the position of the floating button placement using the dropdown menu in the dashboard. For advanced positioning options you can use custom CSS.
 
