--- a/section/gettingStarted/overview.mdx
+++ b/section/gettingStarted/overview.mdx
@@ -5,13 +5,13 @@ description: 'Convert shoppers with targeted, gated rewards.'
 
 <img
   className="block dark:hidden"
-  src="/images/rewardFlow.png"
+  src="/images/RewardWorkflow.png"
   alt="Hero Light"
   style={{ borderRadius: '0.5rem' }}
 />
 <img
   className="hidden dark:block"
-  src="/images/rewardFlow.png"
+  src="/images/RewardWorkflow.png"
   alt="Hero Dark"
   style={{ borderRadius: '0.5rem' }}
 />
