--- a/section/promoteOffers/inStore.mdx
+++ b/section/promoteOffers/inStore.mdx
@@ -4,6 +4,16 @@ description: 'Start building loyal communities with targeted, gated offers.'
 icon: 'shop'
 ---
 
+gocertify unlocks true omni-channel customer engagement with in-store rewards.
+
+In-store claiming can be done by:
+
+- Coupon code entered at till manually
+- Flashing coupon to show to till person
+- QR code scanned at till
+
+To enable in-store claiming talk to your gocertify account manager.
+
 
 <Frame caption="..">
   <img
