updated infobox for landing page

--- a/snippets/landing-page-integration-steps.mdx
+++ b/snippets/landing-page-integration-steps.mdx
@@ -14,7 +14,7 @@
       <gocertify-iframe source="example-campaign"></gocertify-iframe>
     ```
     <Info>
-      Remember to replace `example-campaign` with your actual campaign name (e.g. "students").
+      Remember to replace `example-campaign` with your actual campaign name (e.g. "students") or leave out the attribute `source="example-campaign"` to display all campaigns.
     </Info>
 
   </Step>
