Updating CuG wording

--- a/section/buildRewardFlows/closedUserGroups.mdx
+++ b/section/buildRewardFlows/closedUserGroups.mdx
@@ -44,7 +44,7 @@ gocertify's AI powered verification process verifies shoppers quickly, accuratel
 
 gocertify supports 40+ closed user groups out of the box and can support additional groups on request.
 
-**Student groups**: give rewards to students, apprentices and graduates.
+**Students**: give rewards to students, apprentices and graduates.
 <AccordionGroup>
   <Accordion title="Students" icon="graduation-cap">
       **Definition:** a person formally engaged in learning, especially one enrolled in a school, college or university.
