--- a/section/buildRewardFlows/closedUserGroups.mdx
+++ b/section/buildRewardFlows/closedUserGroups.mdx
@@ -98,6 +98,12 @@ gocertify supports 40+ closed user groups out of the box and can support additio
     **Verification methods:** options include work ID, payslip, certification of practice or work email
   </Accordion>
 
+  <Accordion title="NHS" icon="user-doctor">
+    **Definition:** a provider of health care treatment within the NHS.
+    
+    **Verification methods:** options include work ID, payslip, certification of practice or work email
+  </Accordion>
+
   <Accordion title="Teacher" icon="chalkboard-user">
     **Definition:** an educator who helps students acquire knowledge and valuable skills.
     
