added flow diagram

--- a/section/gettingStarted/overview.mdx
+++ b/section/gettingStarted/overview.mdx
@@ -31,6 +31,9 @@ Think of a gocertify reward flow as the journey that your shoppers go on, from t
 With gocertify you can create as many of these custom reward flows as you want and tailor them to your brand and your audience. For example, creating a campaign around [unique rewards](/section/buildRewardFlows/chooseReward) (e.g. discounts or gift cards), gating offers to specific [target
 audiences](/section/buildRewardFlows/closedUserGroups) (e.g. key workers or students), and leveraging our [DataCapture](/section/captureData/overview) features to collect valuable first party data (i.e. Email or D.O.B).
 
+
+<img src="/images/gocertifyFlow.png" alt="gocertify flow" />
+
 ## How to use this guide
 This guide is designed to help you get started with gocertify. We'll walk you through the process of creating a reward flow, from start to finish. Each key step in the process is laid out as a section within the left hand sidebar, if you're on mobile click the menu icon in the top left to view.
 
