Added link to privacy policy

--- a/section/captureData/overview.mdx
+++ b/section/captureData/overview.mdx
@@ -27,3 +27,5 @@ DataCapture is enabled at the brand level with the ability to apply DataCapture 
 Once switched on shoppers will experience an additional step in the reward flow where they can opt-in to share their data in return for rewards. This screen will
 appear after login but before verification.
 
+To learn more about how gocertify keeps your sensitve data safe please review our [GDPR documentation](https://gocertify.notion.site/GDPR-at-gocertify-700bbc00a8174bfcbaa6ad9ecb0eb4a7), [privacy policy](https://secure.gocertify.me/privacy) and [T&Cs](https://www.gocertify.me/terms).
+
