Added Shopify Documentation

--- a/section/buildRewardFlows/discounts.mdx
+++ b/section/buildRewardFlows/discounts.mdx
@@ -13,11 +13,14 @@ rather provide secure access to a storefront with the discounts pre-applied, you
 
 ## Unique codes
 Unique, or single-use codes let you give every shopper a different discount code. We require a CSV of these codes or can integrate directly with your
-preferred promotion service.
+preferred ecommerce platform or promotion service.
 
 <AccordionGroup>
 <Accordion title="Uploading CSV" icon="file-csv">
     Provide us with a single column CSV of discount codes.
+</Accordion>
+<Accordion title="Integrating with Shopify" icon="shopify">
+    We can fetch codes directly from your Shopify discount feed. We will create a new unique code for each shopper, ensuring that you never run out of codes and can track the performance of each code.
 </Accordion>
 <Accordion title="Integrating with Uniqodo" icon="ticket-simple">
     Provide us with your Uniqodo `API key` and `offer ID` (e.g. 9384) and we'll automatically add codes to your campaign. You can also upload a CSV of discount codes as a fallback.
