--- a/section/gettingStarted/integrateOnSite.mdx
+++ b/section/gettingStarted/integrateOnSite.mdx
@@ -88,6 +88,47 @@ Tag managers let you can easily add the gocertify script site-wide without needi
       </Step>
     </Steps>
   </Accordion>
+
+  <Accordion icon="shopify" title="Shopify">
+
+    <Steps>
+    <Step title="Request an install link">
+        As our Shopify app is still in Beta you will need to first request an install link from your gocertify account manager.
+      </Step>
+      <Step title="Install the app">
+        Once you have received the install link, you can install the app by clicking on the link and selecting `Install`.
+        <Frame>
+          <img src="/images/shopify/shopify-install-screen1.png" alt="Shopify install screen" />
+        </Frame>
+      </Step>
+      <Step title="Connect to your brand">
+        Once installed, you will see the app appear in your left side menu. Click on the app and you will be asked to connect to your gocertify brand by clicking `Connect`.
+        <Frame>
+          <img src="/images/shopify/shopify-connect-screen1.png" alt="Shopify connect screen" />
+        </Frame>
+      </Step>
+      <Step title="Select your brand">
+        You will be presented with a list of brands you have access to. Select the brand you want to connect the app to. If you cannot see your brand, please contact your gocertify account manager.
+        <Frame>
+          <img src="/images/shopify/shopify-connect-screen2.png" alt="Shopify connect screen" />
+        </Frame>
+      </Step>
+      <Step title="Navigate to the embed page">
+        Once successfully connected you will see a success message and a button asking you to `Enable the script`. Click this button to navigate to the embed page.
+        <Frame>
+          <img src="/images/shopify/shopify-enablescript-screen1.png" alt="Shopify connect screen" />
+        </Frame>
+      </Step>
+      <Step title="Enable your embed script">
+        Click the toggle to enable the embed script. The gocertify head script is now enabled and added to your site.
+        <Frame>
+          <img src="/images/shopify/shopify-enablescript-screen2.png" alt="Shopify connect screen" />
+        </Frame>
+      </Step>
+    </Steps>
+  </Accordion>
+
+
 </AccordionGroup>
 
 ### Option 2: Manually add script
