Updated Shopify Coupon

--- a/section/buildRewardFlows/discounts.mdx
+++ b/section/buildRewardFlows/discounts.mdx
@@ -20,7 +20,9 @@ preferred ecommerce platform or promotion service.
     Provide us with a single column CSV of discount codes.
 </Accordion>
 <Accordion title="Integrating with Shopify" icon="shopify">
-    We can fetch codes directly from your Shopify discount feed. We will create a new unique code for each shopper, ensuring that you never run out of codes and can track the performance of each code.
+    We can fetch codes directly from your Shopify discount feed (follow the Shopify installation instructions in [Integrate on Site](/section/gettingStarted/integrateOnSite#shopify)). 
+    
+    We will create a new unique code for each shopper, ensuring that you never run out of codes and can easily track performance.
 </Accordion>
 <Accordion title="Integrating with Uniqodo" icon="ticket-simple">
     Provide us with your Uniqodo `API key` and `offer ID` (e.g. 9384) and we'll automatically add codes to your campaign. You can also upload a CSV of discount codes as a fallback.
