coupon integration feed

--- a/section/buildRewardFlows/discounts.mdx
+++ b/section/buildRewardFlows/discounts.mdx
@@ -20,7 +20,10 @@ preferred ecommerce platform or promotion service.
     Provide us with a single column CSV of discount codes.
 </Accordion>
 <Accordion title="Integrating with Shopify" icon="shopify">
-    We can fetch codes directly from your Shopify discount feed (follow the Shopify installation instructions in [Integrate on Site](/section/gettingStarted/integrateOnSite#shopify)). 
+    [Install the gocertify Shopify app](/section/gettingStarted/integrateOnSite#shopify) to fetch codes directly from your Shopify discount feed.
+    <Tip>
+    You do not need to enable the embed script again if you have already added this through another method and only want to integrate the discount feed.
+    </Tip>
     
     We will create a new unique code for each shopper, ensuring that you never run out of codes and can easily track performance.
 </Accordion>
