ADD: documentation for custom fields on Bloomreach

--- a/section/captureData/customFields.mdx
+++ b/section/captureData/customFields.mdx
@@ -10,88 +10,34 @@ By default, enabling DataCapture will collect shopper emails, enabling you to ru
 any additional data you require to personalise the shopping experience and retarget shoppers.
 
 <Frame caption = "Kwik Fit use DataCapture to personalise the shopping experience and direct shoppers to their local branch">
-<img
-    className="block dark:hidden"
-    src="/images/kwikFit.png"
-    alt="Example DataCapture for Kwik Fit"
-    />
-    <img
-    className="hidden dark:block"
-    src="/images/kwikFit.png"
-    alt="Example DataCapture for Kwik Fit"
-/>
+  <img className="block" src="/images/kwikFit.png" alt="Example DataCapture for Kwik Fit" />
 </Frame>
 
+
 ## Custom Field Types
+
 To ensure your data is standardised and easy to use, gocertify supports a range of custom field types. These can be mapped to your own data fields in your CRM.
 
 ### Text
 Let users input free text; useful for collecting names, postcodes or other unstructured information.
-  <img
-    className="block dark:hidden"
-    src="/images/customFields/customfield-textInput.png"
-    alt="Text Input Example"
-  />
-  <img
-    className="hidden dark:block"
-    src="/images/customFields/customfield-textInput.png"
-    alt="Text Input Example"
-  />
-
+<img className="block" src="/images/customFields/customfield-textInput.png" alt="Text Input Example"/>  
 
 ### Dropdown
 Dropdowns work best when you have a long list of potential options, such as product categories, and want the user to select one.
-
-  <img
-    className="block dark:hidden"
-    src="/images/customFields/customfield-dropdown.png"
-    alt="Dropdown Example"
-  />
-  <img
-    className="hidden dark:block"
-    src="/images/customFields/customfield-dropdown.png"
-    alt="Dropdown Example"
-  />
+<img className="block" src="/images/customFields/customfield-dropdown.png" alt="Dropdown Example"/>
 
 ### Radio Button
 Radio buttons are best used when you have a short list of potential options, such as product size, and want the user to select one.
-  <img
-    className="block dark:hidden"
-    src="/images/customFields/customfield-radioButton.png"
-    alt="Radio Button Example"
-  />
-  <img
-    className="hidden dark:block"
-    src="/images/customFields/customfield-radioButton.png"
-    alt="Radio Button Example"
-  />
-
+<img className="block" src="/images/customFields/customfield-radioButton.png" alt="Radio Button Example"/>
 
 ### Multi Select
 Multi-select allows users to select multiple options from a list, useful for collecting information such as hobbies or interests.
-  <img
-    className="block dark:hidden"
-    src="/images/customFields/customfield-multiSelect.png"
-    alt="Multi Select Example"
-  />
-  <img
-    className="hidden dark:block"
-    src="/images/customFields/customfield-multiSelect.png"
-    alt="Multi Select Example"
-  />
-
+<img className="block" src="/images/customFields/customfield-multiSelect.png" alt="Multi Select Example"/>
 
 ### Date Picker
 Date pickers make it easy to collect dates, such as dates of birth or other significant events.
-  <img
-    className="block dark:hidden"
-    src="/images/customFields/customfield-dateInput.png"
-    alt="Date Input Example"
-  />
-  <img
-    className="hidden dark:block"
-    src="/images/customFields/customfield-dateInput.png"
-    alt="Date Input Example"
-  />
+<img className="block" src="/images/customFields/customfield-dateInput.png" alt="Date Input Example"/>
 
+## Sync to your CDP
 
+At the moment, we only support <a href="/section/captureData/bloomreach#custom-fields"> syncing to Bloomreach</a>. If you want to sync to another CDP, please let us know and we will add support for it.
