Changed the first changelog entry

--- a/changelog/overview.mdx
+++ b/changelog/overview.mdx
@@ -3,16 +3,14 @@ title: Product Updates
 description: 'Product updates and improvements from Gocertify'
 ---
 
-<Update label="2025-01-15" description="v1.1.2">
-  ## New feature: Bloomreach Custom Fields
+<Update label="January 2025" description="">
+  ## Bloomreach Custom Fields
   We've added support for syncing custom fields to Bloomreach. This means you can now sync additional information about your customers to your Bloomreach account, such as their first name, preferred dress size, department preference, and more.
   
   Additionally, we've introduced a new type of custom field, called "multiple choice", which allows the shopper to select multiple options from a list of options.
 
   Find more information in the [Collect Custom Fields](/section/captureData/customFields) section.
-</Update>
 
-<Update label="2025-01-10" description="v1.1.1">
   ## Shopify App
   We are releasing our brand new Shopify app. It will allow our customers to quickly install our script and enable all of our features on their Shopify stores. 
   
